--- a/project.html
+++ b/project.html
@@ -18,25 +18,18 @@
             top: 0;
             width: 100%;
             padding: 20px;
+            height: 77px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             background: rgb(0, 0, 0);
         }
 
-        .logo {
-            margin-left: 50px;
-            background-color: white;
-            color: black;
-            padding: 13px 40px;
-            font-weight: bold;
-        }
-
         .nav-links {
             list-style: none;
             display: flex;
             gap: 50px;
-            margin-right: 10px;
+            margin-right: 5px;
             margin-left: 0;
             margin-bottom: 0;
             margin-top: 0;
@@ -118,13 +111,29 @@
         a img {
             border-radius: 20px;
         }
+
+        nav .logo{
+            margin-left: 5px;
+        }
+
+        .custom-logo h1 {
+            font-size: 1.5rem; /* atau ukuran yang Anda inginkan */
+            font-weight: bold; /* atau gaya lainnya */
+            color: white; /* tetap menjaga gaya Anda */
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="logo">Logo</div>
+            <div class="logo custom-logo">
+                <a href="#" style="text-decoration: none;">
+                    <h1 style="color: white;">Team<span style="color: #65FAFF;">One.</span></h1>
+                </a> 
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="profil.html">Profile</a></li>
@@ -182,50 +191,48 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 align-self-end">
-                <div class="card">
-                    <div class="card-body">
-                      <h2 class="card-title">Cevlix Cinema</h2>
-                      <br>
-                      <p class="card-text">Terinspirasi dari netflix, pada website ini saya menarik data API Film yang tersedia di internet.</p>
+            <div class="row">
+                <div class="col-md-6 align-self-end">
+                    <div class="card">
+                        <div class="card-body">
+                        <h2 class="card-title">Cevlix Cinema</h2>
+                        <br>
+                        <p class="card-text">Terinspirasi dari netflix, pada website ini saya menarik data API Film yang tersedia di internet.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-5">
-                <a href="https://mff676.github.io/Cevlix-Cinema/"><img src="asset/project5.png" style="width: 500px;" alt="image" ></a>
-            </div>
-        </div>
-        <div class="row ">
-            <div class="col-md-6">
-                    <a href="https://mff676.github.io/Cepi-Market/"><img src="asset/project4.png" style="width: 500px;" alt="image" ></a>
+                <div class="col-md-5">
+                    <a href="https://mff676.github.io/Cevlix-Cinema/"><img src="asset/project5.png" style="width: 500px;" alt="image" ></a>
                 </div>
+            </div>
+            <div class="row ">
+                <div class="col-md-6">
+                        <a href="https://mff676.github.io/Cepi-Market/"><img src="asset/project4.png" style="width: 500px;" alt="image" ></a>
+                    </div>
                 <div class="col-md-5 align-self-end">
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title">Website Ecommerce React</h2>
-                          <br>
-                          <p class="card-text">Ini adalah salah satu project selama saya menempuh pendidikan smk, yang dimana saya melatih diri saya untuk membuat layout menggunakan library reactjs</p>
+                            <br>
+                            <p class="card-text">Ini adalah salah satu project selama saya menempuh pendidikan smk, yang dimana saya melatih diri saya untuk membuat layout menggunakan library reactjs</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        
-    </div>
-    <div class="row mb-5">
-        <div class="col-md-6 align-self-end">
-            <div class="card">
-                <div class="card-body">
-                  <h2 class="card-title">NgelehCuk! Website</h2>
-                  <br>
-                  <p class="card-text">Website ini menawarkan fitur resep makanan, mulai dari penyiapan bahan-bahan hingga langkah-langkah memasak nya satu per satu, selain itu website ini juga menyediakan video tutorial untuk memudahkan pengguna mengikuti instruksi yang diberikan pada website</p>
+            <div class="row mb-5">
+                <div class="col-md-6 align-self-end">
+                    <div class="card">
+                        <div class="card-body">
+                          <h2 class="card-title">NgelehCuk! Website</h2>
+                          <br>
+                          <p class="card-text">Website ini menawarkan fitur resep makanan, mulai dari penyiapan bahan-bahan hingga langkah-langkah memasak nya satu per satu, selain itu website ini juga menyediakan video tutorial untuk memudahkan pengguna mengikuti instruksi yang diberikan pada website</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <a href="https://mff676.github.io/Recipe-Project/"><img src="asset/project6.png" style="width: 500px;" alt="image" ></a>
                 </div>
             </div>
-        </div>
-        <div class="col-md-5">
-            <a href="https://mff676.github.io/Recipe-Project/"><img src="asset/project6.png" style="width: 500px;" alt="image" ></a>
         </div>
     </div>
 
