--- a/profil.html
+++ b/profil.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hover Animation</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -209,7 +213,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="profil.html">Profile</a></li>
                 <li><a href="project.html">Project</a></li>
-                <li><a href="#" class="btn-contact">Contact Us</a></li>
+                <li><a href="index.html#contact" class="btn-contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -232,7 +236,7 @@
                             <div class="text-content">
                                 <h3>Designer and Programmer</h3>
                                 <br>
-                                <h5>Halo, nama saya Aido, dan saya adalah seorang junior web full-stack developer. Saya memiliki passion dalam menciptakan situs web yang dinamis dan responsif, serta memiliki keterampilan di teknologi front-end seperti HTML, CSS, dan JavaScript, serta framework back-end seperti Node.js</h5>
+                                <h5 style="text-align: justify; padding-right: 30px;">Halo, nama saya Aido, dan saya adalah seorang junior web full-stack developer. Saya memiliki passion dalam menciptakan situs web yang dinamis dan responsif, serta memiliki keterampilan di teknologi front-end seperti HTML, CSS, dan JavaScript, serta framework back-end seperti Node.js</h5>
                             </div>
                         </div>
                         <div class="social-icons">
@@ -260,7 +264,7 @@
                             <div class="text-content">
                                 <h3>Front End Developer</h3>
                                 <br>
-                                <h5>Halo! Aku Muhammad Fathul Falah, seorang Junior Developer yang suka banget ngulik web development dan teknologi digital. Aku biasa pakai JavaScript, React, Python, SQL, dan juga ngembangin website. Sekarang aku lagi terus belajar buat bikin solusi digital yang keren dan bermanfaat</h5>
+                                <h5 style="text-align: justify; padding-right: 30px;">Halo! Aku Muhammad Fathul Falah, seorang Junior Developer yang suka banget ngulik web development dan teknologi digital. Aku biasa pakai JavaScript, React, Python, SQL, dan juga ngembangin website. Sekarang aku lagi terus belajar buat bikin solusi digital yang keren dan bermanfaat</h5>
                             </div>
                         </div>
                         <div class="social-icons">
@@ -287,7 +291,7 @@
                             <div class="text-content">
                                 <h3>Fullstack Developer</h3>
                                 <br>
-                                <h5>Halo, siapapun yang melihat profile saya, nama saya Vahid Bintang Hasyeemian… ini pengalaman pertama saya dalam bidang pemrograman web</h5>
+                                <h5 style="text-align: justify; padding-right: 30px;">Halo, siapapun yang melihat profile saya, nama saya Vahid Bintang Hasyeemian… ini pengalaman pertama saya dalam bidang pemrograman web</h5>
                             </div>
                         </div>
                         <div class="social-icons">
@@ -314,7 +318,7 @@
                             <div class="text-content">
                                 <h3>Fullstack Developer</h3>
                                 <br>
-                                <h5>Halo, saya Bagas Nurdiansyah, seorang Junior Developer yang antusias dengan pengembangan web dan teknologi digital. Dengan dasar yang kuat dalam HTML, CSS, PHP, dan framework seperti Bootstrap, saya terus belajar dan mengasah kemampuan untuk menciptakan solusi digital yang inovatif.</h5>
+                                <h5 style="text-align: justify; padding-right: 30px;">Halo, saya Bagas Nurdiansyah, seorang Junior Developer yang antusias dengan pengembangan web dan teknologi digital. Dengan dasar yang kuat dalam HTML, CSS, PHP, dan framework seperti Bootstrap, saya terus belajar dan mengasah kemampuan untuk menciptakan solusi digital yang inovatif.</h5>
                             </div>
                         </div>
                         <div class="social-icons">
