--- a/project.html
+++ b/project.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hover Animation</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -138,7 +142,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="profil.html">Profile</a></li>
                 <li><a href="project.html">Project</a></li>
-                <li><a href="#" class="btn-contact">Contact Us</a></li>
+                <li><a href="index.html#contact" class="btn-contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -197,7 +201,7 @@
                         <div class="card-body">
                         <h2 class="card-title">Cevlix Cinema</h2>
                         <br>
-                        <p class="card-text">Terinspirasi dari netflix, pada website ini saya menarik data API Film yang tersedia di internet.</p>
+                        <p class="card-text">Terinspirasi dari netflix, pada website ini Falah menarik data API Film yang tersedia di internet.</p>
                         </div>
                     </div>
                 </div>
@@ -214,7 +218,7 @@
                         <div class="card-body">
                             <h2 class="card-title">Website Ecommerce React</h2>
                             <br>
-                            <p class="card-text">Ini adalah salah satu project selama saya menempuh pendidikan smk, yang dimana saya melatih diri saya untuk membuat layout menggunakan library reactjs</p>
+                            <p class="card-text">Ini adalah salah satu project selama Falah menempuh pendidikan smk, yang dimana Falah melatih diri Falah untuk membuat layout menggunakan library reactjs</p>
                         </div>
                     </div>
                 </div>
