--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+
 </head>
 
 <body>
@@ -156,9 +158,9 @@
             </div>
             <div class="content-foot">
                 <ul>
-                    <li>kelompok1@gmail.com</li>
-                    <li>@Kelompok1</li>
-                    <li>+6212345678212</li>
+                    <li><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>kelompok1@gmail.com</li>
+                    <li><i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i>@Kelompok1</li>
+                    <li><i class="fa-solid fa-phone" style="color: #ffffff;"></i>+6212345678212</li>
                 </ul>
             </div>
         </div>
